Normalize page scaffolding and fix login markup

--- a/course.html
+++ b/course.html
@@ -463,9 +463,8 @@ body{
 
 </head>
 
-<body>
+<body data-page="course">
   <div id="appHeader"></div>
-  <div id=\"appHeader\"></div>
 
   <main class="page">
     <div class="container">
