--- a/ejercicio.html
+++ b/ejercicio.html
@@ -439,14 +439,14 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-  <body>
+  <body data-page="ejercicio">
   <div id="appHeader"></div>
-<div id=\"appHeader\"></div>
 <div class="sessionBar">
       Sesión activa: <strong id="sessionEmail">Cargando...</strong>
     </div>
 
-    <main class="container">
+    <main class="page">
+      <div class="container">
       <div id="toast"></div>
 
       <div class="card">
@@ -535,6 +535,7 @@
 
       <!-- Admin moved to ejercicioadmin.html -->
       <div id="adminWrap" class="card adminWrap" style="display:none"></div>
+      </div>
     </main>
 
     
