--- a/esadmin.html
+++ b/esadmin.html
@@ -249,9 +249,11 @@
 </style>
   </head>
 
-  <body>
+  <body data-page="esadmin">
     <div id="appHeader"></div>
-    <div class="wrap">
+    <main class="page">
+      <div class="container">
+        <div class="wrap">
       <a class="back" href="espanel.html">← Volver al panel</a>
 
       <h1>Admin</h1>
@@ -292,7 +294,9 @@
         <button class="btn btnGray" id="btnLoadMore">Cargar más</button>
         <div class="mutedSmall" id="loadInfo"></div>
       </div>
-    </div>
+        </div>
+      </div>
+    </main>
 
     <!-- Firebase -->
     <script type="module">
