--- a/espanel.html
+++ b/espanel.html
@@ -370,7 +370,7 @@
             #settingsModal, #settingsModal * { color:#fff; }
     </style>
   </head>
-  <body>
+  <body data-page="espanel">
     <div id="appHeader"></div>
     <main class="page">
       <div class="container">
