--- a/lessonpage.html
+++ b/lessonpage.html
@@ -364,7 +364,7 @@
     <script src="assets/js/layout.js" defer></script>
   </head>
 
-  <body>
+  <body data-page="lessonpage">
     <div id="appHeader"></div>
 
     <main class="page">
