--- a/Ebooks.html
+++ b/Ebooks.html
@@ -275,8 +275,8 @@
   <script src="/_sdk/data_sdk.js" type="text/javascript"></script>
    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
- <body class="h-full font-body bg-blue-main text-white">
-  <div id=\"appHeader\"></div>
+ <body class="h-full font-body bg-blue-main text-white" data-page="ebooks">
+  <div id="appHeader"></div>
   <div class="w-full h-full overflow-auto"><!-- Navigation -->
    <nav class="fixed top-0 left-0 right-0 z-50 nav-glass">
     <div class="max-w-7xl mx-auto px-6 py-5">
