--- a/lessonpage.html
+++ b/lessonpage.html
@@ -11,358 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;800;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css" />
-
-    <style>
-      :root {
-        --yellow: #fcd116;
-        --blue: #003893;
-        --red: #ce1126;
-        --ink: #0b1b3f;
-      }
-      * {
-        box-sizing: border-box;
-      }
-      body {
-        margin: 0;
-        font-family: Montserrat, Arial, sans-serif;
-        min-height: 100vh;
-        background: linear-gradient(180deg, #001a4d, #003893, #001a4d);
-        color: #fff;
-      }
-
-      /* Nav (spójne) */
-      .nav-glass {
-        position: sticky;
-        top: 0;
-        z-index: 50;
-        background: rgba(0, 56, 147, 0.78);
-        backdrop-filter: blur(10px);
-        border-bottom: 1px solid rgba(255, 255, 255, 0.14);
-      }
-      .nav-glass::after {
-        content: '';
-        display: block;
-        height: 3px;
-        background: linear-gradient(
-          90deg,
-          var(--yellow),
-          var(--blue),
-          var(--red)
-        );
-        opacity: 0.85;
-      }
-      .nav-inner {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        gap: 8px;
-        padding: 2px 16px;
-        max-width: 1100px;
-        margin: 0 auto;
-        flex-wrap: wrap;
-      }
-      .brand {
-        display: flex;
-        align-items: center;
-        gap: 12px;
-        min-width: 180px;
-      }
-      .logo-flag {
-        width: 42px;
-        height: 42px;
-        border-radius: 999px;
-        background: linear-gradient(
-          180deg,
-          var(--yellow) 0 33.33%,
-          var(--blue) 33.33% 66.66%,
-          var(--red) 66.66% 100%
-        );
-        box-shadow: 0 12px 26px rgba(0, 0, 0, 0.25);
-      }
-      .name {
-        font-family: 'Playfair Display', serif;
-        font-weight: 900;
-        font-size: 24px;
-        color: #fff;
-        letter-spacing: 0.2px;
-      }
-      .nav-actions {
-        display: flex;
-        gap: 10px;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: flex-end;
-      }
-
-      .btn {
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-        padding: 12px 16px;
-        border-radius: 999px;
-        font-weight: 900;
-        cursor: pointer;
-        text-decoration: none;
-        white-space: nowrap;
-        border: 1px solid rgba(255, 255, 255, 0.18);
-        background: rgba(255, 255, 255, 0.12);
-        color: #fff;
-        user-select: none;
-        transition:
-          transform 0.12s ease,
-          filter 0.12s ease;
-      }
-      .btn:hover {
-        transform: translateY(-2px);
-        filter: brightness(1.03);
-      }
-      .btn:disabled {
-        opacity: 0.6;
-        cursor: not-allowed;
-        transform: none;
-      }
-      .btn-yellow {
-        background: rgba(252, 209, 22, 0.95);
-        border-color: rgba(252, 209, 22, 0.7);
-        color: var(--ink);
-      }
-      .btn-red {
-        background: rgba(206, 17, 38, 0.92);
-        border-color: rgba(206, 17, 38, 0.8);
-        color: #fff;
-      }
-
-      .container {
-        max-width: 1100px;
-        margin: 0 auto;
-        padding: 18px 16px 60px;
-      }
-
-      /* Hero jak w course */
-      .heroBanner {
-        margin: 6px 0 18px;
-        padding: 22px 22px;
-        border-radius: 22px;
-        background: rgba(0, 26, 77, 0.26);
-        border: 1px solid rgba(255, 255, 255, 0.16);
-        backdrop-filter: blur(10px);
-        box-shadow: 0 18px 70px rgba(0, 0, 0, 0.18);
-      }
-      .heroTitleRow {
-        display: flex;
-        align-items: flex-start;
-        gap: 18px;
-      }
-      .heroIcon {
-        font-size: 56px;
-        line-height: 1;
-        filter: drop-shadow(0 14px 30px rgba(0, 0, 0, 0.25));
-      }
-      h1 {
-        font-family: 'Playfair Display', serif;
-        font-weight: 900;
-        font-size: 46px;
-        margin: 0 0 8px 0;
-        line-height: 1.05;
-        color: #ffffff;
-        text-shadow: 0 12px 30px rgba(0, 0, 0, 0.45);
-      }
-      @media (max-width: 860px) {
-        h1 {
-          font-size: 38px;
-        }
-      }
-
-      .subtitle {
-        opacity: 0.9;
-        margin: 0;
-        line-height: 1.6;
-        max-width: 980px;
-      }
-
-      .metaRow {
-        display: flex;
-        gap: 10px;
-        flex-wrap: wrap;
-        align-items: center;
-        margin-top: 14px;
-      }
-      .pill {
-        font-size: 12px;
-        font-weight: 900;
-        border-radius: 999px;
-        padding: 8px 12px;
-        border: 1px solid rgba(255, 255, 255, 0.18);
-        background: rgba(255, 255, 255, 0.12);
-        color: #fff;
-      }
-      .pill-yellow {
-        background: rgba(252, 209, 22, 0.95);
-        color: var(--ink);
-        border-color: rgba(252, 209, 22, 0.7);
-      }
-      .pill-green {
-        background: rgba(34, 197, 94, 0.14);
-        border: 1px solid rgba(34, 197, 94, 0.25);
-        color: #eafff1;
-      }
-      .pill-red {
-        background: rgba(239, 68, 68, 0.12);
-        border: 1px solid rgba(239, 68, 68, 0.22);
-        color: #ffecec;
-      }
-
-      .card {
-        background: rgba(255, 255, 255, 0.1);
-        border: 1px solid rgba(255, 255, 255, 0.18);
-        backdrop-filter: blur(12px);
-        border-radius: 18px;
-        padding: 16px;
-        margin: 14px 0;
-      }
-      .sectionTitle {
-        margin: 22px 0 10px;
-        font-size: 16px;
-        font-weight: 900;
-        letter-spacing: 0.3px;
-        display: flex;
-        align-items: center;
-        gap: 10px;
-      }
-
-      .lessonHtml {
-        line-height: 1.65;
-        font-size: 15px;
-        opacity: 0.97;
-        white-space: normal;
-      }
-      .lessonHtml h2,
-      .lessonHtml h3 {
-        color: var(--yellow);
-        margin: 18px 0 10px;
-      }
-      .lessonHtml img {
-        max-width: 100%;
-        border-radius: 18px;
-        border: 1px solid rgba(255, 255, 255, 0.14);
-        display: block;
-        margin: 14px auto;
-      }
-      .empty {
-        opacity: 0.78;
-        font-size: 14px;
-        padding: 10px 0;
-      }
-      .hintSmall {
-        font-size: 12px;
-        opacity: 0.78;
-        margin-top: 10px;
-        line-height: 1.35;
-      }
-
-      /* TOC */
-      .tocLink {
-        display: block;
-        padding: 10px 12px;
-        border-radius: 12px;
-        text-decoration: none;
-        color: #fff;
-        border: 1px solid rgba(255, 255, 255, 0.14);
-        background: rgba(255, 255, 255, 0.08);
-        margin: 8px 0;
-        font-weight: 900;
-        transition:
-          transform 0.12s ease,
-          filter 0.12s ease;
-      }
-      .tocLink:hover {
-        filter: brightness(1.06);
-        transform: translateY(-1px);
-      }
-      .tocSub {
-        margin-left: 14px;
-        opacity: 0.92;
-        font-weight: 800;
-      }
-
-      /* Reading progress */
-      .readTools {
-        margin-top: 12px;
-        display: flex;
-        gap: 12px;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: space-between;
-      }
-      .readProgress {
-        display: flex;
-        align-items: center;
-        gap: 12px;
-        flex-wrap: wrap;
-      }
-      .readProgressBar {
-        width: min(360px, 100%);
-        height: 10px;
-        border-radius: 999px;
-        background: rgba(255, 255, 255, 0.14);
-        border: 1px solid rgba(255, 255, 255, 0.18);
-        overflow: hidden;
-      }
-      .readProgressFill {
-        height: 100%;
-        background: var(--yellow);
-        width: 0%;
-        transition: width 0.18s ease;
-      }
-      .readProgressText {
-        font-size: 12px;
-        font-weight: 900;
-        opacity: 0.92;
-      }
-      .exerciseLinks {
-        display: flex;
-        gap: 10px;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: flex-end;
-      }
-
-      /* Toast */
-      #toast {
-        display: none;
-        position: fixed;
-        left: 50%;
-        bottom: 18px;
-        transform: translateX(-50%);
-        z-index: 9999;
-        padding: 12px 14px;
-        border-radius: 999px;
-        font-weight: 900;
-        letter-spacing: 0.2px;
-        box-shadow: 0 14px 30px rgba(0, 0, 0, 0.28);
-        border: 1px solid rgba(255, 255, 255, 0.18);
-        backdrop-filter: blur(10px);
-        max-width: min(920px, calc(100% - 24px));
-        text-align: center;
-      }
-      .toast-ok {
-        background: rgba(6, 95, 70, 0.92);
-        color: #fff;
-      }
-      .toast-bad {
-        background: rgba(185, 28, 28, 0.92);
-        color: #fff;
-      }
-      .toast-warn {
-        background: rgba(252, 209, 22, 0.94);
-        color: var(--ink);
-        border-color: rgba(252, 209, 22, 0.7);
-      }
-    </style>
     <script src="assets/js/layout.js" defer></script>
-  </head>
+  <link rel="stylesheet" href="assets/css/styles.css">
+</head>
 
   <body data-page="lessonpage">
     <div id="appHeader"></div>
