--- a/lessonadmin.html
+++ b/lessonadmin.html
@@ -8,289 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;800;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/styles.css" />
-
-  <style>
-    :root{ --yellow:#FCD116; --blue:#003893; --red:#CE1126; --ink:#0b1b3f; }
-    *{ box-sizing:border-box; }
-    body{
-      margin:0;
-      font-family: Montserrat, Arial, sans-serif;
-      min-height:100vh;
-      background: linear-gradient(180deg, #001a4d, #003893, #001a4d);
-      color:#fff;
-    }
-
-    .nav-glass{
-      position: sticky; top: 0; z-index: 50;
-      background: rgba(0, 56, 147, 0.78);
-      backdrop-filter: blur(10px);
-      border-bottom: 1px solid rgba(255, 255, 255, 0.14);
-    }
-    .nav-glass::after{
-      content:""; display:block; height:3px;
-      background: linear-gradient(90deg, var(--yellow), var(--blue), var(--red));
-      opacity:.85;
-    }
-    .nav-inner{
-      display:flex; align-items:center; justify-content:space-between; gap:14px;
-      padding: 14px 16px; max-width: 1100px; margin: 0 auto;
-      flex-wrap: wrap;
-    }
-    .brand{ display:flex; align-items:center; gap:12px; min-width: 180px; }
-    .logo-flag{
-      width:42px; height:42px; border-radius:999px;
-      background: linear-gradient(180deg, var(--yellow) 0 33.33%, var(--blue) 33.33% 66.66%, var(--red) 66.66% 100%);
-      box-shadow: 0 12px 26px rgba(0,0,0,.25);
-    }
-    .name{ font-family:"Playfair Display", serif; font-weight:900; font-size:24px; color:#fff; letter-spacing:.2px; }
-    .nav-actions{ display:flex; gap:10px; flex-wrap:wrap; align-items:center; justify-content:flex-end; }
-
-    .btn{
-      display:inline-flex; align-items:center; justify-content:center; gap:10px;
-      padding: 12px 16px; border-radius:999px; font-weight:900;
-      cursor:pointer; text-decoration:none; white-space:nowrap;
-      border: 1px solid rgba(255,255,255,0.18);
-      background: rgba(255,255,255,0.12);
-      color:#fff;
-      user-select:none;
-      transition: transform .12s ease, filter .12s ease;
-    }
-    .btn:hover{ transform: translateY(-2px); filter: brightness(1.03); }
-    .btn:disabled{ opacity:.6; cursor:not-allowed; transform:none; }
-    .btn-yellow{
-      background: rgba(252, 209, 22, 0.95);
-      border-color: rgba(252, 209, 22, 0.7);
-      color: var(--ink);
-    }
-    .btn-red{
-      background: rgba(206, 17, 38, 0.92);
-      border-color: rgba(206, 17, 38, 0.8);
-      color: #fff;
-    }
-
-    .container{ max-width: 1100px; margin: 0 auto; padding: 18px 16px 60px; }
-
-    h1{
-      font-family:"Playfair Display", serif;
-      font-weight: 900;
-      font-size: 40px;
-      margin: 0 0 8px 0;
-      line-height: 1.05;
-      color: var(--yellow);
-    }
-    .subtitle{ opacity:0.9; margin: 0; line-height: 1.6; max-width: 980px; }
-
-    .card{
-      background: rgba(255,255,255,0.10);
-      border: 1px solid rgba(255,255,255,0.18);
-      backdrop-filter: blur(12px);
-      border-radius: 18px;
-      padding: 16px;
-      margin: 14px 0;
-    }
-    .sectionTitle{
-      margin: 12px 0 10px;
-      font-size: 16px;
-      font-weight: 900;
-      letter-spacing: 0.3px;
-      display:flex;
-      align-items:center;
-      gap:10px;
-    }
-    .metaRow{ display:flex; gap:10px; flex-wrap: wrap; align-items:center; margin-top: 10px; }
-    .pill{
-      font-size: 12px; font-weight: 900; border-radius: 999px; padding: 8px 12px;
-      border: 1px solid rgba(255,255,255,0.18);
-      background: rgba(255,255,255,0.12);
-      color: #fff;
-    }
-    .pill-yellow{ background: rgba(252, 209, 22, 0.95); color: var(--ink); border-color: rgba(252, 209, 22, 0.7); }
-    .pill-green{ background: rgba(34,197,94,.14); border:1px solid rgba(34,197,94,.25); color:#eafff1; }
-    .pill-red{ background: rgba(239,68,68,.12); border:1px solid rgba(239,68,68,.22); color:#ffecec; }
-
-    .formGrid{ display:grid; gap: 10px; grid-template-columns: repeat(2, minmax(0,1fr)); align-items:start; }
-    @media (max-width: 860px){ .formGrid{ grid-template-columns: 1fr; } }
-    .field{ display:grid; gap:6px; }
-    .field label{ font-size: 12px; font-weight: 900; opacity:.92; letter-spacing:.2px; }
-    .input, .select, textarea{
-      width: 100%;
-      border-radius: 14px;
-      border: 1px solid rgba(255,255,255,0.22);
-      background: rgba(255,255,255,0.12);
-      color:#fff;
-      padding: 10px 12px;
-      font-size: 14px;
-      outline: none;
-      font-family: Montserrat, Arial, sans-serif;
-      font-weight: 700;
-    }
-    textarea{
-      min-height: 320px;
-      resize: vertical;
-      line-height: 1.5;
-      background: rgba(0,0,0,0.18);
-      border-color: rgba(255,255,255,0.18);
-    }
-    .select{
-      cursor:pointer;
-      appearance:none; -webkit-appearance:none; -moz-appearance:none;
-      padding-right: 42px;
-      background-image:
-        linear-gradient(45deg, transparent 50%, rgba(255,255,255,0.92) 50%),
-        linear-gradient(135deg, rgba(255,255,255,0.92) 50%, transparent 50%);
-      background-position:
-        calc(100% - 18px) calc(50% - 3px),
-        calc(100% - 12px) calc(50% - 3px);
-      background-size: 6px 6px, 6px 6px;
-      background-repeat: no-repeat;
-    }
-    .select option{ background: var(--blue); color: #fff; }
-
-    .actions{ display:flex; gap:10px; flex-wrap:wrap; justify-content:flex-end; margin-top: 10px; }
-    .hintSmall{ font-size: 12px; opacity: .78; margin-top: 10px; line-height: 1.35; }
-
-    #toast{
-      display:none;
-      position: fixed;
-      left: 50%;
-      bottom: 18px;
-      transform: translateX(-50%);
-      z-index: 9999;
-      padding: 12px 14px;
-      border-radius: 999px;
-      font-weight: 900;
-      letter-spacing: 0.2px;
-      box-shadow: 0 14px 30px rgba(0,0,0,0.28);
-      border: 1px solid rgba(255,255,255,0.18);
-      backdrop-filter: blur(10px);
-      max-width: min(920px, calc(100% - 24px));
-      text-align:center;
-    }
-    .toast-ok{ background: rgba(6, 95, 70, 0.92); color: #fff; }
-    .toast-bad{ background: rgba(185, 28, 28, 0.92); color: #fff; }
-    .toast-warn{ background: rgba(252, 209, 22, 0.94); color: var(--ink); border-color: rgba(252, 209, 22, 0.7); }
-
-    /* Preview */
-    .previewBox{ border-radius: 16px; padding: 14px; background: rgba(0,0,0,0.18); border: 1px solid rgba(255,255,255,0.14); }
-    .previewBox .lessonHtml{ line-height: 1.65; font-size: 15px; opacity: .97; white-space: normal; }
-    .previewBox .lessonHtml h2, .previewBox .lessonHtml h3{ color: var(--yellow); margin: 18px 0 10px; }
-    .previewBox .lessonHtml img{ max-width:100%; border-radius: 18px; border: 1px solid rgba(255,255,255,0.14); display:block; margin: 14px auto; }
-
-    /* Blocks builder */
-    .builderTop{ display:flex; gap:10px; flex-wrap:wrap; align-items:center; justify-content:space-between; margin: 6px 0 10px; }
-    .builderBtns{ display:flex; gap:10px; flex-wrap:wrap; align-items:center; }
-    .miniBtn{
-      display:inline-flex; align-items:center; justify-content:center; gap:8px;
-      padding: 10px 12px; border-radius: 999px; font-weight: 900; cursor:pointer;
-      border: 1px solid rgba(255,255,255,0.18);
-      background: rgba(255,255,255,0.10);
-      color:#fff;
-      user-select:none;
-      transition: transform .12s ease, filter .12s ease;
-    }
-    .miniBtn:hover{ transform: translateY(-1px); filter: brightness(1.05); }
-    .miniBtn.yellow{ background: rgba(252, 209, 22, 0.95); border-color: rgba(252, 209, 22, 0.7); color: var(--ink); }
-    .miniBtn.red{ background: rgba(206, 17, 38, 0.92); border-color: rgba(206, 17, 38, 0.8); color:#fff; }
-
-    .blocksList{ display:grid; gap: 10px; margin-top: 10px; }
-    .blockCard{
-      border-radius: 18px;
-      padding: 12px;
-      border: 1px solid rgba(255,255,255,0.16);
-      background: rgba(255,255,255,0.08);
-      box-shadow: 0 12px 30px rgba(0,0,0,0.12);
-    }
-    .blockHead{ display:flex; gap:10px; flex-wrap:wrap; align-items:center; justify-content:space-between; }
-    .blockTitle{ font-weight: 900; }
-    .blockTools{ display:flex; gap:8px; flex-wrap:wrap; align-items:center; }
-    .toolBtn{
-      width: 40px; height: 40px;
-      border-radius: 14px;
-      border: 1px solid rgba(255,255,255,0.18);
-      background: rgba(255,255,255,0.10);
-      color:#fff;
-      cursor:pointer;
-      display:inline-flex; align-items:center; justify-content:center;
-      font-weight: 900;
-      transition: transform .12s ease, filter .12s ease;
-    }
-    .toolBtn:hover{ transform: translateY(-1px); filter: brightness(1.06); }
-    .toolBtn.danger{ background: rgba(206,17,38,0.18); border-color: rgba(206,17,38,0.35); }
-
-    .blockGrid{ display:grid; gap:10px; grid-template-columns: repeat(2, minmax(0,1fr)); margin-top: 10px; }
-    @media (max-width: 860px){ .blockGrid{ grid-template-columns: 1fr; } }
-    .blockGrid .field{ margin:0; }
-
-    .hrLine{ height:1px; background: rgba(255,255,255,0.14); margin: 10px 0; }
-    .mutedTiny{ font-size: 12px; opacity: .80; line-height: 1.35; }
-
-    /* Make selects consistent in builder */
-    .inlineRow{ display:flex; gap:10px; flex-wrap:wrap; align-items:center; }
-    .inlineRow .field{ flex:1; min-width: 160px; }
-  
-    /* Right add dock */
-    .addDock{
-      position: fixed;
-      right: 14px;
-      top: 118px;
-      z-index: 90;
-      width: 270px;
-      padding: 12px;
-      border-radius: 18px;
-      background: rgba(0,0,0,0.30);
-      border: 1px solid rgba(255,255,255,0.16);
-      backdrop-filter: blur(12px);
-      box-shadow: 0 18px 50px rgba(0,0,0,0.22);
-      display:flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-    .addDockTitle{
-      font-weight: 900;
-      font-size: 12px;
-      letter-spacing: .2px;
-      opacity: .92;
-      display:flex;
-      align-items:center;
-      justify-content: space-between;
-      gap: 10px;
-    }
-    .dockGrid{
-      display:grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 8px;
-    }
-    .dockBtn{
-      display:inline-flex; align-items:center; justify-content:center; gap:10px;
-      padding: 10px 12px; border-radius: 999px; font-weight: 900;
-      cursor:pointer; border: 1px solid rgba(255,255,255,0.18);
-      background: rgba(255,255,255,0.10); color:#fff;
-      white-space: nowrap;
-      transition: transform .12s ease, filter .12s ease;
-      user-select:none;
-    }
-    .dockBtn:hover{ transform: translateY(-2px); filter: brightness(1.05); }
-    .dockBtn.yellow{ background: rgba(252, 209, 22, 0.95); border-color: rgba(252, 209, 22, 0.7); color: var(--ink); }
-    .dockBtn.blue{ background: rgba(0, 56, 147, 0.55); border-color: rgba(255,255,255,0.18); }
-    .dockSelect{ width:100%; padding: 10px 12px; border-radius: 14px; border: 1px solid rgba(255,255,255,0.18);
-      background: rgba(255,255,255,0.10); color:#fff; font-weight: 900; outline:none; }
-    .dockSelect option{ color: #0b1b3f; }
-    .dockDivider{ height:1px; background: rgba(255,255,255,0.14); margin: 6px 0; }
-    @media (max-width: 980px){
-      .addDock{ width: 240px; }
-    }
-    @media (max-width: 860px){
-      .addDock{
-        left: 12px;
-        right: 12px;
-        top: auto;
-        bottom: 12px;
-        width: auto;
-      }
-      .dockGrid{ grid-template-columns: 1fr 1fr 1fr; }
-    }
-</style>
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body data-page="lessonadmin">
