Fix HTML doctype and body tag formatting

--- a/espanel.html
+++ b/espanel.html
@@ -1,5 +1,4 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="utf-8" />
@@ -266,7 +265,7 @@
 
               50%  { transform: translateY(-14px) translateX(-6px) rotate(1deg) scale(1.02); }
               100% { transform: translateY(0px) translateX(0px) rotate(-1deg) scale(1); }
-            }
+            
             @media (max-width: 980px) {
               #coffeeFloat { display:none; }
             }
@@ -370,7 +369,7 @@
             #settingsModal, #settingsModal * { color:#fff; }
     </style>
   </head>
-  <body data-page="espanel">
+  <body>
     <div id="appHeader"></div>
     <main class="page">
       <div class="container">
@@ -3143,3 +3142,4 @@
     </script>
   </body>
 </html>
+
